--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,22 +7,10 @@ publish_to: 'none'
 
 
 
-
-
-
-
-
-
-
-
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
-
-
-
-
 
 
 
@@ -41,34 +29,29 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   flow_builder: ^0.0.6
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
   authentication_repository:
     path: packages/authentication_repository
   form_inputs:
     path: packages/form_inputs
+  flutter_localizations:
+      sdk: flutter
+  shared_preferences: ^2.0.13
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  
-  
-  
-  
+
   
   flutter_lints: ^1.0.0
 
 
 
-
-
 flutter:
-
-  
-  
-  
   uses-material-design: true
-
+  generate: true
   
   
   
