--- a/packages/firebase_repository/pubspec.yaml
+++ b/packages/firebase_repository/pubspec.yaml
@@ -1,5 +1,5 @@
-name: authentication_repository
-description: Auth repository
+name: firebase_repository
+description: firebase repository
 version: 1.0.0+1
 publish_to: none
 
@@ -17,6 +17,8 @@ dependencies:
   google_sign_in: ^5.0.7
   meta: ^1.3.0
   very_good_analysis: ^2.4.0
+  cloud_firestore: ^3.1.12
+
 
 dev_dependencies:
   flutter_test:
