--- a/packages/firebase_data/pubspec.yaml
+++ b/packages/firebase_data/pubspec.yaml
@@ -1,5 +1,5 @@
-name: firebase_repository
-description: firebase repository
+name: firebase_data
+description: firebase data layer
 version: 1.0.0+1
 publish_to: none
 
@@ -18,6 +18,8 @@ dependencies:
   meta: ^1.3.0
   very_good_analysis: ^2.4.0
   cloud_firestore: ^3.1.12
+  domain:
+      path: ..//domain
 
 
 dev_dependencies:
